[package]
edition = "2021"
name = "drive2023"
version = "0.0.1"

[dependencies]
embassy-sync = { version = "0.1.0", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.1.0", path = "../embassy/embassy-executor", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = ["nightly", "unstable-traits", "defmt", "stm32f401cc", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-usb = { version = "0.1.0", path = "../embassy/embassy-usb", features = ["defmt"] }
embassy-net = { version = "0.1.0", path = "../embassy/embassy-net", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "nightly"], optional = true }
embassy-embedded-hal = { version = "0.1.0", path = "../embassy/embassy-embedded-hal" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = "0.4.0"

# panic-probe = { version = "0.3", features = ["print-defmt"] }

futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.0"
micromath = "2.0.0"
static_cell = "1.0"

serde = { version = "1.0.152", default-features = false, features = ["derive"]}
serde-json-core = { version = "0.5.0", default-features = false, features = ["heapless"] }

mpu9250-i2c = "0.6.8"

lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[profile.release]
debug = 2
